Fix the visual bug with buttons being too high and hence having weird top and bottom border in export dialog

--- a/src/components/ExportDialog.scss
+++ b/src/components/ExportDialog.scss
@@ -26,6 +26,10 @@
 .ExportDialog__name {
   grid-column: project-name;
   margin: auto;
+
+  .TextInput {
+    height: calc(1rem - 3px);
+  }
 }
 
 @media (max-width: 550px) {
